# py-config

./: .buildinfo  .gitignore  LICENSE  Makefile  README.ipynb  README.md  README.qmd  core.html  genindex.html  index.html  objects.inv  pyproject.toml  quickstart.html  requirements.txt  robots.txt  search.html  search.json  searchindex.js  settings.ini  sitemap.xml  user-guide.html
.github/workflows/: docs.yml  test.yml
_sources/: quickstart.md.txt  user-guide.md.txt
config/: _modidx.py  core.py
docs/: Makefile  _quarto.yml  _sidebar.yml  index.qmd  objects.json  quickstart.qmd  user-guide.qmd
docs/reference/: config_get.qmd  index.qmd
docs/site_libs/bootstrap/: bootstrap.min.css
docs/source/: conf.py  index.md
docs/source/stubs/: quickstart-stub.md
docs/stubs/: features-stub.md  quickstart-stub.md
nbs/: 00_core.ipynb  config.yaml  index.ipynb  nbdev.yml
reference/: config_get.html  index.html
src/config/: __init__.py  core.py  here.py
stubs/: features-stub.html  quickstart-stub.html
tests/: test_core.py
