
# [project]
# requires-python = ">=3.8"
# classifiers = [
#     "Programming Language :: Python :: 3",
#     "License :: OSI Approved :: MIT License",
#     "Operating System :: OS Independent",
# ]


# [project.urls]
# Homepage = "https://github.com/andrie/py-config"
# Issues = "https://github.com/andrie/py-config/issues"


[tool.poetry]
name = "config"
version = "0.0.1"
readme = "README.md"
description = "Configuration management for Python"
authors = [ "Andrie de Vries <apdevries@gmail.com>" ]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
sphinx-prompt = "^1.8.0"
sphinx-copybutton = "^0.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"